fixed overflow for mobile

--- a/website/static/sass/abstract/_reset.scss
+++ b/website/static/sass/abstract/_reset.scss
@@ -1,8 +1,5 @@
 * {
     margin: 0;
     padding: 0;
-}
-
-html {
     overflow-x: hidden;
 }
